syntax = "proto3";

package task;

option go_package = "github.com/danielteferadeti/grpc_practice/proto";

import "google/protobuf/timestamp.proto";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (Task) {}
  rpc GetTask(GetTaskRequest) returns (Task) {}
  rpc UpdateTask(UpdateTaskRequest) returns (Task) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  google.protobuf.Timestamp due_date = 5;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  google.protobuf.Timestamp due_date = 3;
}

message GetTaskRequest {
  string id = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  google.protobuf.Timestamp due_date = 5;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}

message ListTasksRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListTasksResponse {
  repeated Task tasks = 1;
  int32 total_count = 2;
}